@@ -223,8 +223,24 @@
 		<p>NOTE: these layout algorithms manage only nodes connected by edges, other nodes are layouted from left to right as usual.</p>
 		<h4 id="useElk">Use an ELK layout algorithm</h4>
 		<p>Additional layout algorithms can be available if you have installed the ELK integration feature with Sirius. Please refers to the 
-			<a href="https://www.eclipse.org/elk/reference/algorithms.html">ELK documentation</a> if you want details about these algorithms. All these algorithms exclude pinned elements from the layouting and shorten edges between border nodes in addition to their core algorithm. 
+			<a href="https://www.eclipse.org/elk/reference/algorithms.html">ELK documentation</a> if you want details about these algorithms. This feature is considered as experimental because of remaining bugs concerning the ELK integration.
 		</p>
+		<p>When using one of the ELK layout algorithms, there are some specificities in comparison with the other &#8220;standard&#8221; Sirius layout:</p>
+		<ul>
+			<li>The pinned status is not considered. All pinned elements are layouted as if they are not pinned. ELK does not manage this kind of property and Sirius does not add post treatement that could break the layout result.</li>
+			<li>Arrange all : All elements are layouted. The top left coordinates of the bounding box of all elements is {20, 20} (same coordinates as the result of 
+				<a href="../../user/diagrams/Diagrams.html#reset_origin">
+					<em>Reset Origin</em>
+				</a> action action).
+			</li>
+		</ul>   * Even in case of scroll bars before the starting point of arrange all
+		<ul>
+			<li>Arrange selection on one container: This action layouts all its content, resizes it to display its content but does not change its location.</li>
+			<li>Arrange selection on several elements on the same level: This action layouts elements in relation to each other but by ignoring other brothers. Overlap with other brothers, not selected ones, is possible. The top left coordinates of the bounding box of all elements remain the same.</li>
+		</ul>   * If elements are containers: In addition to above behavior, their contents are layouted and  they are resized.
+		<ul>
+			<li>Arrange selection on a container and some of its children: The result of this action is the same as launching an arrange selection only on the container.</li>
+		</ul>
 		<p>To use these algorithm, first install the feature: </p>
 		<p>
 			<img border="0" src="images/elkFeatureInstall.png"/>
@@ -240,10 +256,10 @@
 		<p>
 			<img border="0" src="images/elkOptionsDialog.png"/>
 		</p>
+		<p>Also you can filter the options by using the text field. The filtering applies to all columns except for the values.</p>
 		<p>To get an overview of what is possible with ELK you can read this 
 			<a href="https://blog.obeo.fr/a-picture-is-worth-a-thousand-words">article</a>.
 		</p>
-		<p>Also you can filter the options by using the text field. The filtering applies to all columns except for the values.</p>
 		<h4 id="Useacustomlayoutalgorithm">Use a custom layout algorithm</h4>
 		<p>If you need to go beyond what already exists, you can provide your own layout algorithm programmatically (see the 
 			<a href="../../developer/Sirius%20Developer%20Manual.html">developer documentation</a> for details).
