@@ -6,6 +6,10 @@ This document contains the release notes for recent major releases of Sirius. Se
 
 h2(#sirius6.4.0). Changes in Sirius 6.4.0
 
+h3. Specifier-Visible Changes
+
+Several improvements have been done concerning ELK integration. This feature is always considered as experimental (because several bugs remain). Additional documentation is available "here":specifier/diagrams/Diagrams.html#useElk .
+
 h3. Developer-Visible Changes
 
 * <span class="label label-success">Added</span> @org.eclipse.sirius.ui.tools.api.dialogs.AnalysisSelectorFilteredItemsSelectionDialog@ has been created in order to have custom analysis selector provider able to modify the analysis selector dialog.
